# TD

./: .gitignore  GPU_RUNBOOK.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: ralph-loop.local.md
Time-dialation/src/timedilate/: __init__.py  cli.py  config.py  controller.py  engine.py
Time-dialation/tests/: test_cli_flags.py  test_config.py  test_controller.py  test_controller_extended.py  test_edge_gaps.py  test_engine_extended.py  test_engine_final.py  test_spec_scaffolds.py
docs/superpowers/specs/: 2026-04-14-ai-time-dilation-design.md
ignore/: .gitignore  main.py
ignore/src/diagnostics/: engine.py
ignore/src/trainer/: __init__.py
ignore/src/utils/: model_loader.py
ignore/src/verifier/: __init__.py  verifier.py
self recursive improvment/: main.py  requirements.txt
self recursive improvment/docs/superpowers/specs/: 2026-04-14-recursive-self-improvement-design.md
self recursive improvment/src/diagnostics/: __init__.py
self recursive improvment/src/generator/: data_generator.py
self recursive improvment/src/orchestrator/: __init__.py  loop.py
self recursive improvment/src/trainer/: custom_lora.py
self recursive improvment/src/utils/: config.py  vllm_backend.py
src/orchestrator/: loop.py
src/timedilate/: __init__.py  benchmark.py  checkpoint.py  cli.py  config.py  controller.py  directives.py  engine.py  improver.py  logging_config.py  meta.py  metrics.py  prompts.py  scorer.py
src/utils/: __init__.py
tests/: conftest.py  test_benchmark.py  test_branch_diversity.py  test_bug_sweep.py  test_checkpoint.py  test_cli.py  test_cli_extended.py  test_config.py  test_config_extended.py  test_config_file.py  test_controller.py  test_convergence.py  test_directives.py  test_edge_gaps.py  test_engine.py  test_engine_final.py  test_engine_round2.py  test_ensemble.py  test_events.py  test_improver.py  test_integration.py  test_logging_config.py  test_meta.py  test_metrics.py  test_perf.py  test_prompts.py  test_scorer.py  test_scoring.py  test_stress.py
